// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel[Base] should render correctly  1`] = `
<div
  class="c-wwz5ja csodlhi cvw31qg"
  style="width: 600px; height: auto;"
>
  <div
    class="c-z4e7c6"
    style="height: 280px;"
  >
    <div
      class="c-r3dfsk chtyw3x"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
      />
    </div>
    <div
      class="c-r3dfsk"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
      />
    </div>
    <div
      class="c-r3dfsk"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
      />
    </div>
    <div
      class="c-r3dfsk"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
      />
    </div>
  </div>
  <div
    class="c-7zm6gz c-no0p3p c-6mlgow"
  >
    <div
      class="c-yz4h6y c-on3wx0"
    />
    <div
      class="c-yz4h6y"
    />
    <div
      class="c-yz4h6y"
    />
    <div
      class="c-yz4h6y"
    />
  </div>
  <div
    class="cx6097w c-bcc7b1"
  >
    <div
      class="cuux2tz cuuvgyr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
        />
      </svg>
    </div>
    <div
      class="cxbe26k cuuvgyr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Carousel[Base] should render correctly about animation 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      animation type:
    </div>
    <div
      class="c-awrlvn"
    >
      <div
        class="c-lm6ub3 c-odm5yi"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          slide
        </span>
      </div>
      <div
        class="c-lm6ub3"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          slide-y
        </span>
      </div>
      <div
        class="c-lm6ub3"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          fade
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-wwz5ja csodlhi cvw31qg"
    style="width: 600px; height: auto;"
  >
    <div
      class="c-z4e7c6"
      style="height: 280px;"
    >
      <div
        class="c-r3dfsk chtyw3x"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
        />
      </div>
      <div
        class="c-r3dfsk"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
        />
      </div>
      <div
        class="c-r3dfsk"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
        />
      </div>
      <div
        class="c-r3dfsk"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
        />
      </div>
    </div>
    <div
      class="c-7zm6gz c-no0p3p c-6mlgow"
    >
      <div
        class="c-yz4h6y c-on3wx0"
      />
      <div
        class="c-yz4h6y"
      />
      <div
        class="c-yz4h6y"
      />
      <div
        class="c-yz4h6y"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel[Base] should render correctly about indicator 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      indicator position:
    </div>
    <div
      class="c-awrlvn"
    >
      <div
        class="c-lm6ub3"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          left
        </span>
      </div>
      <div
        class="c-lm6ub3 c-odm5yi"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          center
        </span>
      </div>
      <div
        class="c-lm6ub3"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          right
        </span>
      </div>
      <div
        class="c-lm6ub3"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          outer
        </span>
      </div>
    </div>
  </div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      indicator type:
    </div>
    <div
      class="c-awrlvn"
    >
      <div
        class="c-lm6ub3 c-odm5yi"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          circle
        </span>
      </div>
      <div
        class="c-lm6ub3"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          line
        </span>
      </div>
      <div
        class="c-lm6ub3"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-zdc08q"
        >
          <span
            class="cr9iwb1"
            tabindex="1"
          />
        </span>
        <span
          class="c6iqcpf"
        >
          number
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-wwz5ja csodlhi cvw31qg"
    style="width: 600px; height: auto;"
  >
    <div
      class="c-z4e7c6"
      style="height: 280px;"
    >
      <div
        class="c-r3dfsk chtyw3x"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
        />
      </div>
      <div
        class="c-r3dfsk"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
        />
      </div>
      <div
        class="c-r3dfsk"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
        />
      </div>
      <div
        class="c-r3dfsk"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
        />
      </div>
    </div>
    <div
      class="c-7zm6gz c-no0p3p c-6mlgow"
    >
      <div
        class="c-yz4h6y c-on3wx0"
      />
      <div
        class="c-yz4h6y"
      />
      <div
        class="c-yz4h6y"
      />
      <div
        class="c-yz4h6y"
      />
    </div>
  </div>
</div>
`;
